# AdventofCode2024

./: .gitignore  .pre-commit-config.yaml  README.md  setup.sh
Notes/: DFSvsBFS.md
day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml
day07/: Cargo.toml
day08/: Cargo.toml
day09/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml
day25/: Cargo.toml
