[package]
name = "day20"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
hashbrown = "0.15.2"
itertools = "0.13.0"

[[bin]]
name = "part1"
path = "src/bin/part1.rs"

[[bin]]
name = "part2"
path = "src/bin/part2.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
